Fixed a problem with a scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -127,18 +127,29 @@ img {
 /************************************************
     SOLUZIONE RESPONSIVE
  ************************************************/
+ /* ? BONUS */
+ @media screen and (min-width:768px) and (max-width:1160px){
+    .container{
+        width: 100%;
+    }    
+}
+
+
+
+
+
+ /* ? TABLET */
 @media screen and (max-width:768px) {
     html{
         font-size: 12px;
-    }
-    
-    .container{
-        width: 100%;
     }
 }
 
 
 
+
+
+/* ? TELEFONO */
 @media screen and (max-width:480px) {
     html{
         font-size: 11px;
